src/syntax/snapshots/texlab__syntax__latex__tests__bibtex_include_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\bibliography{foo/bar}\"#)"

---
ROOT@0..22
  PREAMBLE@0..22
    BIBTEX_INCLUDE@0..22
      BIBTEX_INCLUDE_COMMAND@0..13 "\\bibliography"
      BRACE_GROUP_WORD_LIST@13..22
        L_BRACE@13..14 "{"
        WORD@14..21 "foo/bar"
        R_BRACE@21..22 "}"

