src/syntax/snapshots/texlab__syntax__latex__tests__brace_group_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"{hello world}\"#)"

---
ROOT@0..13
  PREAMBLE@0..13
    BRACE_GROUP@0..13
      L_BRACE@0..1 "{"
      TEXT@1..12
        WORD@1..6 "hello"
        WHITESPACE@6..7 " "
        WORD@7..12 "world"
      R_BRACE@12..13 "}"

