src/syntax/snapshots/texlab__syntax__latex__tests__caption_minimal.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\caption{Foo \\Bar Baz}\"#)"

---
ROOT@0..22
  PREAMBLE@0..22
    CAPTION@0..22
      CAPTION_COMMAND@0..8 "\\caption"
      BRACE_GROUP@8..22
        L_BRACE@8..9 "{"
        TEXT@9..13
          WORD@9..12 "Foo"
          WHITESPACE@12..13 " "
        GENERIC_COMMAND@13..18
          GENERIC_COMMAND_NAME@13..17 "\\Bar"
          WHITESPACE@17..18 " "
        TEXT@18..21
          WORD@18..21 "Baz"
        R_BRACE@21..22 "}"

