src/syntax/snapshots/texlab__syntax__latex__tests__citation_missing_brace.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\cite{foo\"#)"

---
ROOT@0..9
  PREAMBLE@0..9
    CITATION@0..9
      CITATION_COMMAND@0..5 "\\cite"
      BRACE_GROUP_WORD_LIST@5..9
        L_BRACE@5..6 "{"
        WORD@6..9 "foo"
        MISSING@9..9 ""

