src/syntax/snapshots/texlab__syntax__latex__tests__citation_multiple_keys.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\cite{foo, bar}\"#)"

---
ROOT@0..15
  PREAMBLE@0..15
    CITATION@0..15
      CITATION_COMMAND@0..5 "\\cite"
      BRACE_GROUP_WORD_LIST@5..15
        L_BRACE@5..6 "{"
        WORD@6..9 "foo"
        COMMA@9..10 ","
        WHITESPACE@10..11 " "
        WORD@11..14 "bar"
        R_BRACE@14..15 "}"

