src/syntax/snapshots/texlab__syntax__latex__tests__citation_prenote_postnote.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\cite[foo][bar]{baz}\"#)"

---
ROOT@0..20
  PREAMBLE@0..20
    CITATION@0..20
      CITATION_COMMAND@0..5 "\\cite"
      BRACKET_GROUP@5..10
        L_BRACKET@5..6 "["
        TEXT@6..9
          WORD@6..9 "foo"
        R_BRACKET@9..10 "]"
      BRACKET_GROUP@10..15
        L_BRACKET@10..11 "["
        TEXT@11..14
          WORD@11..14 "bar"
        R_BRACKET@14..15 "]"
      BRACE_GROUP_WORD_LIST@15..20
        L_BRACE@15..16 "{"
        WORD@16..19 "baz"
        R_BRACE@19..20 "}"

