src/syntax/snapshots/texlab__syntax__latex__tests__citation_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\cite{foo}\"#)"

---
ROOT@0..10
  PREAMBLE@0..10
    CITATION@0..10
      CITATION_COMMAND@0..5 "\\cite"
      BRACE_GROUP_WORD_LIST@5..10
        L_BRACE@5..6 "{"
        WORD@6..9 "foo"
        R_BRACE@9..10 "}"

